# messenger

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/authentication/: lib.rs
src/authentication/handlers/user/: auth_test.rs  delete.rs  login.rs  new.rs
src/authentication/handlers/user/change_credentials/: change_password.rs  change_username.rs
src/authentication/handlers/user/refresh/: access_token.rs  refresh_token.rs
src/authentication/middleware/user/: auth.rs  refresh_auth.rs
src/authentication/models/: appstate.rs  auth_user.rs  user.rs  user_permission.rs
src/authentication/util/: cookies.rs  hashing.rs  validation.rs
src/authentication/util/jwt/: access_token.rs  claims.rs  general.rs  refresh_token.rs
src/templates/: wrapper.rs
